--- a/sites/all/themes/apteka/scss/_base.scss
+++ b/sites/all/themes/apteka/scss/_base.scss
@@ -533,6 +533,14 @@
       background: url("../images/shopping-cart.png") no-repeat left center;
     }
   }
+  .cart-contents {
+    float: right;
+    margin-top: -16px;
+    margin-left: 10px;
+    a {
+      text-decoration: none;
+    }
+  }
   .line-item-quantity-raw {
     display: block;
     background-color: $orange;
@@ -543,9 +551,6 @@
     line-height: 23px;
     font-weight: 600;
     text-align: center;
-    position: absolute;
-    right: 10px;
-    top: 6px;
   }
 }
 
@@ -858,16 +863,18 @@
       list-style: none;
     }
     a {
-      background: url("../images/herbal.png") no-repeat left center;
       display: block;
       text-decoration: none;
       font-weight: 600;
-      padding: 8px 0 8px 28px;
+      padding: 8px 0;
       -webkit-transition-duration: 0.3s;
       -moz-transition-duration: 0.3s;
       -ms-transition-duration: 0.3s;
       -o-transition-duration: 0.3s;
       transition-duration: 0.2s;
+      img {
+        padding-right: 20px;
+      }
       &.active, &:hover {
         color: $orange;
       }
