--- a/sites/all/themes/apteka/scss/_base.scss
+++ b/sites/all/themes/apteka/scss/_base.scss
@@ -133,12 +133,17 @@
     &.show {
       display: block !important;
       position: absolute;
-      top: 120px;
       left: 0;
       right: 0;
       width: 100%;
       padding: 20px 15px;
       background-color: #fff;
+      @media (min-width: 411px) {
+        top: 120px;
+      }
+      @media (max-width: 410px) {
+        top: 265px;
+      }
     }
   }
 }
@@ -257,7 +262,7 @@
     padding: 10px 15px 15px 15px;
     position: absolute;
     top: 120px;
-    z-index: 3;
+    z-index: 999;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -272,13 +277,16 @@
       }
       a {
         text-decoration: none;
-        background: url("../images/herbal.png") no-repeat left center;
+        //background: url("../images/herbal.png") no-repeat left center;
         display: block;
         font-weight: 600;
-        padding: 8px 0 8px 28px;
+        padding: 8px 0;
         transition: .3s;
         &:hover {
           color: $orange;
+        }
+        img {
+          padding-right: 15px;
         }
       }
     }
@@ -1565,16 +1573,16 @@
 }
 
 .view-recipes {
+  //background: url("/sites/default/files/ris/list.jpg") no-repeat right bottom / 800px auto;
   .views-row {
     a {
       display: block;
-      color: $orange;
-      text-decoration: none;
+      color: #555;
       padding-top: 3px;
       padding-bottom: 3px;
       transition: .35s;
       &:hover {
-        color: darken($orange, 20%);
+        color: darken(#555, 20%);
       }
     }
   }
@@ -2379,4 +2387,70 @@ article.node-5 {
 
 #cboxContent {
   margin-bottom: unset !important;
+}
+
+.view-recipes {
+  p {
+    text-align: justify;
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+}
+
+.back-to-top {
+  text-decoration: none;
+  width: 30px;
+  height: 30px;
+  display: block;
+  background: url("../images/black-arrow-pointing-up.svg") #1a1818 no-repeat center;
+  background-size: 50% auto;
+  position: fixed;
+  right: 0;
+  bottom: 5%;
+  z-index: 999;
+}
+
+.header-mobile-top {
+  .search-form {
+    position: relative;
+    z-index: 99;
+    label {
+      display: block;
+      padding-bottom: 5px;
+    }
+    .form-item {
+      margin-bottom: 10px;
+      input {
+        display: block;
+        padding-left: 10px;
+        line-height: 30px;
+      }
+      select {
+        padding-left: 10px;
+        height: 35px;
+      }
+      input, select {
+        width: 100%;
+      }
+    }
+  }
+  #edit-submit {
+    position: absolute;
+    top: 31px;
+    right: 10px;
+    &[src="/sites/all/themes/apteka/images/search.png"] {
+      width: 23px;
+    }
+  }
+}
+
+#block-custom-search-blocks-1 {
+  .form-actions {
+    input {
+      &[src="/sites/all/themes/apteka/images/search.png"] {
+        width: 16px;
+        margin-top: 2px;
+      }
+    }
+  }
 }
