--- a/sites/all/themes/apteka/scss/_base.scss
+++ b/sites/all/themes/apteka/scss/_base.scss
@@ -74,6 +74,12 @@
       width: 50%;
     }
   }
+  #block-multiblock-9 {
+    padding-top: 15px;
+    padding-left: 40px;
+    background: url(../images/local.png) no-repeat left center;
+    padding-bottom: 15px;
+  }
 }
 
 .header-mobile-center {
@@ -417,6 +423,7 @@
   }
   [type="text"] {
     padding-left: 10px;
+    line-height: 25px;
   }
 }
 
@@ -822,7 +829,7 @@
   @media (max-width: 815px) {
     padding: 20px 15px;
   }
-  @media (max-width: 360px){
+  @media (max-width: 360px) {
     padding: 15px 5px;
   }
   > h2 {
@@ -1169,6 +1176,9 @@
     margin-right: -15px;
     @include flexbox;
     @include flex-wrap(wrap);
+    @media (max-width: 414px) {
+      @include justify-content(space-between);
+    }
     @media (max-width: 625px) and (min-width: 412px) {
       position: relative;
       &:before {
@@ -1186,11 +1196,16 @@
     }
   }
   .views-row {
-    @include flex(1);
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 20px;
-    min-width: 150px;
+    @media (min-width: 415px) {
+      @include flex(1);
+      min-width: 150px;
+    }
+    @media (max-width: 414px) {
+      width: 40%;
+    }
   }
   [type="submit"] {
     margin-top: 23px;
@@ -1377,7 +1392,7 @@
       width: 100%;
       float: left;
     }
-    @media (max-width: 341px){
+    @media (max-width: 341px) {
       max-width: 80px;
       height: 100px;
       @include flexbox;
@@ -1404,7 +1419,7 @@
       width: 65%;
       margin-bottom: 5px;
     }
-    @media (max-width: 360px){
+    @media (max-width: 360px) {
       width: 70%;
     }
   }
@@ -1575,12 +1590,17 @@
     margin-left: -5px;
     margin-right: -5px;
     a {
+      display: inline-block;
+      vertical-align: middle;
       padding-left: 5px;
       padding-right: 5px;
       text-decoration: none;
       text-transform: lowercase;
       &:hover {
         color: $orange;
+      }
+      img {
+        padding-right: 5px;
       }
     }
   }
@@ -1693,8 +1713,10 @@
 
 #views-form-commerce-cart-form-default {
   table {
-    border-collapse: collapse;
     width: 100%;
+    @media (min-width: 611px) {
+      border-collapse: collapse;
+    }
   }
   thead {
     background-color: #e8e8e8;
@@ -1774,22 +1796,33 @@
 
 .commerce-line-item-actions {
   position: relative;
-  @include flexbox;
-  @include justify-content(flex-end);
+  @media (min-width: 401px) {
+    @include flexbox;
+    @include justify-content(flex-end);
+  }
   #edit-submit {
     color: #555;
-    max-width: 185px;
-    margin-right: 15px;
     background-color: #e8e8e8;
     border-bottom-color: #9d9d9d;
     transition: .3s;
     &:hover {
       background-color: darken(#e8e8e8, 7%);
     }
+    @media (min-width: 401px) {
+      max-width: 185px;
+      margin-right: 15px;
+    }
+    @media (max-width: 400px) {
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
   }
   #edit-checkout {
-    max-width: 185px;
-    margin-left: 15px;
+    @media (min-width: 401px) {
+      max-width: 185px;
+      margin-right: 15px;
+    }
   }
 }
 
@@ -1800,19 +1833,21 @@
   border-bottom: 2px solid #a54603;
   border-radius: 5px;
   background-color: $orange;
-  max-width: 195px;
   width: 100%;
   display: block;
   color: #fff;
   text-align: center;
   font-weight: 600;
-  position: absolute;
-  left: 0;
   text-decoration: none;
   transition: .3s;
   &:hover {
     border-bottom-color: darken(#a54603, 10%);
     background-color: darken($orange, 10%);
+  }
+  @media (min-width: 401px) {
+    max-width: 195px;
+    position: absolute;
+    left: 0;
   }
 }
 
@@ -2536,7 +2571,7 @@ article.node-5 {
     input {
       &[src="/sites/all/themes/apteka/images/search.png"] {
         width: 16px;
-        margin-top: 2px;
+        margin-top: 5px;
       }
     }
   }
@@ -2553,7 +2588,7 @@ article.node-5 {
 }
 
 .view-taxonomy-term {
-  form {
+  form.commerce-add-to-cart {
     width: 28%;
     @media (max-width: 600px) {
       margin-top: 10px;
@@ -2561,17 +2596,18 @@ article.node-5 {
     select {
       display: none;
     }
-    @media (min-width: 415px){
+    @media (min-width: 415px) {
       min-width: 160px;
     }
-    @media (max-width: 414px){
+    @media (max-width: 414px) {
       min-width: 105px;
       float: right;
     }
   }
 }
-.commerce-add-to-cart{
-  select{
+
+.commerce-add-to-cart {
+  select {
     display: none;
   }
 }
