added module views_pdf

--- a/sites/all/themes/apteka/scss/_base.scss
+++ b/sites/all/themes/apteka/scss/_base.scss
@@ -421,7 +421,12 @@
     top: 1px;
     right: 35px;
   }
+  .form-item-custom-search-blocks-form-1{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   [type="text"] {
+    width: 100%;
     padding-left: 10px;
     line-height: 25px;
   }
